frontend/src/main/k8s-config/do/dev-install.yaml

---
kind: Service
apiVersion: v1
metadata:
  name: demo
  namespace: do-myproject
  labels:
    run: demo
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9091
  selector:
    run: demo


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: do-myproject
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: demo.geek.per.sg
      http:
        paths:
          - path: /
            backend:
              serviceName: demo
              servicePort: 9090
          - path: /person
            backend:
              serviceName: demo
              servicePort: 9090
          - path: /randomNames
            backend:
              serviceName: demo
              servicePort: 9090
          - path: /whatsInTheFile
            backend:
              serviceName: demo
              servicePort: 9090


---
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: demo
  namespace: do-myproject
  labels:
    run: demo
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: demo
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: "demo version 1.2.6"
      labels:
        run: demo
    spec:
      containers:
        - name: demo
          image: balchu/demo
          ports:
            - containerPort: 9091
              protocol: TCP
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
            httpGet:
              path: /health
              port: 9091
          resources:
            limits:
              memory: 512M
              cpu: 1000m
            requests:
              memory: 256M
              cpu: 500m
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
