frontend/src/main/k8s-config/do/do-k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: do-myproject
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: demo.geek.per.sg
    http:
      paths:
      - path: /
        backend:
          serviceName: demo
          servicePort: 9090
      - path: /person
        backend:
          serviceName: demo
          servicePort: 9090
      - path: /randomNames
        backend:
          serviceName: demo
          servicePort: 9090
      - path: /whatsInTheFile
        backend:
          serviceName: demo
          servicePort: 9090
